UI updates -- overflow and 4k fixes

--- a/src/index.css
+++ b/src/index.css
@@ -5,18 +5,8 @@
 
 body{
     background-color: black;
+    overflow: hidden;
 }
-/* .set_img{
-    background-image: url("/public/icons/528.png");
-    height: 100%;
-    width: 100%;
-} */
-
-/* @media only screen and (min-width: 1740px) {
-    .set_img{
-       background-image: none;
-    }
-  } */
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
